# splitbyintensity

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  splitbyintensity.cpp  splitbyintensity.sln  splitbyintensity.vcxproj  splitbyintensity.vcxproj.filters  vcpkg.json
.github/workflows/: cmake.yml  main.yml
